--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "fitmeal_app",
-    "slug": "fitmeal_app",
+    "name": "synq",
+    "slug": "synq",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
